--- a/缓存/浏览器缓存.md
+++ b/缓存/浏览器缓存.md
@@ -56,7 +56,7 @@ ano();
 
 ![](res/2021-03-26-20-18-18.png)
 
-### html 禁止缓存
+### html meta 标签禁止缓存
 
 ```html
 <meta
@@ -68,7 +68,9 @@ ano();
 <meta charset="UTF-8" />
 ```
 
+> 这里的对象是引入的文件而不是本身
 > 经测试:没有用,如果 js 文件相应头里面设了强缓存,还是会用缓存
+> 但效果一般。因为只被少数几个浏览器宠幸，而代理缓存基本上就不访问 HTML 文档。
 
 ## 强缓存
 
@@ -77,6 +79,7 @@ ano();
 > 给返回的 html 文件加上强缓存,但每一都是 304,即会去问一次服务器,本地资源是否可用
 
 ![](res/2021-03-26-20-27-25.png)
+**如果是命中缓存 200 一定是 from cache,403 一定不是 from cache**
 
 ### 服务器设置
 
